[gd_scene load_steps=8 format=2]

[ext_resource path="res://Audio/Aud_BasicShot.tres" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Weapons/Scripts/PatternWeapon.gd" type="Script" id=2]
[ext_resource path="res://General Scripts/AudioStreamEnhancer.gd" type="Script" id=3]
[ext_resource path="res://Placeholders/General/Sp_Placeholder_Circle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Weapons/Patterns/Sc_Pattern_Double.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Weapons/Bullets/Sc_Bullet_BasicEnemy.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[node name="BasicEnemyWeapon" type="Node2D"]
script = ExtResource( 2 )
bulletSpawnPoint = NodePath("Position2D")
bulletPattern = ExtResource( 5 )
bullet = ExtResource( 7 )
baseFireRate = 0.75
baseBulletDamage = 1000.0
baseBulletSpeed = 120.0

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Position2D"]
visible = false
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 4 )

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
pitch_scale = 1.5
bus = "Effects"
script = ExtResource( 3 )
pitchVariance = 0.4
volumeVariance = 0.15

[node name="NoiseRangeArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="NoiseRangeSphere" type="CollisionShape2D" parent="NoiseRangeArea"]
shape = SubResource( 1 )
